force-app/main/default/objects/ImporteMaximoValidacionSede__mdt/ImporteMaximoValidacionSede__mdt.object-meta.xml
<CustomObject>
    <label>ImporteMaximoValidacionSede</label>
    <pluralLabel>ImporteMaximoValidacionSede</pluralLabel>
</CustomObject>