force-app/main/default/objects/ImporteMaximoValidacionSede__mdt/fields/CurrencyIsoCode__c.field-meta.xml
<CustomField>
    <fullName>CurrencyIsoCode__c</fullName>
    <label>CurrencyIsoCode</label>
    <length>3</length>
    <type>Text</type>
</CustomField>