force-app/main/default/objects/ImporteMaximoValidacionSede__mdt/fields/MaxImporte__c.field-meta.xml
<CustomField>
    <fullName>MaxImporte__c</fullName>
    <label>MaxImporte</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>