force-app/main/default/objects/ImporteMaximoValidacionSede__mdt/fields/Sede__c.field-meta.xml
<CustomField>
    <fullName>Sede__c</fullName>
    <label>Sede</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1210</fullName>
                <default>true</default>
                <label>1210</label>
            </value>
            <value>
                <fullName>1000</fullName>
            </value>
            <value>
                <fullName>1110</fullName>
            </value>
            <value>
                <fullName>4410</fullName>
                <label>VASS Perú</label>
            </value>
            <value>
                <fullName>VASS Colombia</fullName>
            </value>
            <value>
                <fullName>VASS México</fullName>
            </value>
            <value>
                <fullName>VASS Chile</fullName>
            </value>
            <value>
                <fullName>2210</fullName>
                <label>VASS UK</label>
            </value>
            <value>
                <fullName>VASS Benelux</fullName>
            </value>
            <value>
                <fullName>1800</fullName>
            </value>
            <value>
                <fullName>VDSHOP</fullName>
            </value>
            <value>
                <fullName>1100</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>